# ChangeLog for games-util/vispatch
# Copyright 2007-2008 Gentoo Foundation; Distributed under the GPL v2

  20 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> vispatch-1.4.4.ebuild:
  Removed useless src_compile.

  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> vispatch-1.4.4.ebuild:
  Fixed some repoman reported errors.

  18 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> -vispatch-1.4.3.ebuild,
  +vispatch-1.4.4.ebuild:
  Version bump.

  24 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> +vispatch-1.4.3.ebuild:
  Version bump.