@@ -1,3 +1,5 @@
 DIST vispatch-1.4.4.tgz 206263 RMD160 4392adc02c057d9266f9e3e03ffed6ea1d2d5e57 SHA1 53b6e1a5e2b4525398f23c12ba1bec9a033aff41 SHA256 6c966c6be016d6f2e254bb2825e89e8b44aeb1ccc3b6d92dfe95c3f55f0d1fe8
+DIST vispatch-1.4.5.tgz 216695 RMD160 9c79575b653ad35ea632b2cc2201354ba7b15e0f SHA1 a1b5bcf465fbcb40a700e31194d4acbccfc9893a SHA256 da2bc3a8c200943a192656f9c2a09de2b722d0b49a07faa4e22b5f84af8a2fea
 EBUILD vispatch-1.4.4.ebuild 651 RMD160 920e205bec9876bc359718e34ab8e6b1974b1873 SHA1 8fbc40a1b1015c8a559fe7a5f44e9b50916236fe SHA256 cf22316450e20104e891cb54a0c82b10c0c07d4a541d8d965bae66278d4c64c6
-MISC ChangeLog 523 RMD160 fbaaf726466f618881c346493d8a5e174f2c50c5 SHA1 c4b8dc7bba6c6f08534756fd4bcab2c0ed86a7b0 SHA256 41cfc1fe64d46635f2652748b3d23b7d5862c81140dd87c87e7ca435e5a9cfb6
+EBUILD vispatch-1.4.5.ebuild 607 RMD160 deab2e734a0ec8c0b5183d32462576be28fb007a SHA1 6c1b8248e6d0c945deb0be9aa40894d80f0a207b SHA256 b3d21dfa404c2faa84b6618316254b3e9163100a92f9ae8ba8cff137a26ac3aa
+MISC ChangeLog 612 RMD160 72a4ff4fa24e695351b5332215b5cc3c32b2c956 SHA1 6e3fb9d6020d4940df1a52ab22a920803b889a5f SHA256 5520f15822b66738370f3cfd3d481cb9e78c7f6e37cdbf1416d8d76a68209bd4
